<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/menuhome"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/menu_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/menu_category"
            android:title="@string/category" />

        <item
            android:id="@+id/nav_new_products"
            android:icon="@drawable/menu_newproducts"
            android:title="@string/New_Products" />
        <item
            android:id="@+id/nav_my_orders"
            android:icon="@drawable/menu_myorders"
            android:title="@string/my_orders" />
        <item
            android:id="@+id/nav_my_carts"
            android:icon="@drawable/menu_mycarts"
            android:title="@string/my_cart" />

    </group>
</menu>